--- a/StudentOrganiser/Base.lproj/Main.storyboard
+++ b/StudentOrganiser/Base.lproj/Main.storyboard
@@ -289,7 +289,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0Nf-Pf-047">
-                                <rect key="frame" x="308" y="61" width="30" height="30"/>
+                                <rect key="frame" x="272" y="61" width="66" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save"/>
                             </button>
@@ -332,12 +332,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="KCW-6Z-vhl">
+                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="KCW-6Z-vhl">
                                 <rect key="frame" x="0.0" y="330" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="547956115.89688003">
                                     <!--2018-05-14 02:01:55 +0000-->
                                 </date>
+                                <connections>
+                                    <action selector="dateChanged:" destination="zYt-fs-pyk" eventType="valueChanged" id="arT-zz-zj9"/>
+                                </connections>
                             </datePicker>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name of Expense" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AaJ-5G-0No">
                                 <rect key="frame" x="120" y="114" width="135" height="21"/>
@@ -372,6 +375,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save Expense"/>
                                 <connections>
+                                    <action selector="saveButton:" destination="zYt-fs-pyk" eventType="touchUpInside" id="cQb-HD-avQ"/>
                                     <segue destination="VRx-mc-DeO" kind="presentation" id="ccM-Z4-JRS"/>
                                 </connections>
                             </button>
@@ -385,6 +389,11 @@
                         <barButtonItem style="plain" systemItem="flexibleSpace" id="Syd-X5-Y40"/>
                     </toolbarItems>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="expenseCostTextField" destination="aLz-PN-oaX" id="QPj-Ha-Jxy"/>
+                        <outlet property="expenseDatePicker" destination="KCW-6Z-vhl" id="B89-mM-pKj"/>
+                        <outlet property="expenseNameTextField" destination="96d-bI-l2j" id="jB4-Rv-H4X"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WY3-c0-rsb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
