--- a/StudentOrganiser/Base.lproj/Main.storyboard
+++ b/StudentOrganiser/Base.lproj/Main.storyboard
@@ -806,6 +806,6 @@
         <segue reference="BfO-xN-FGi"/>
         <segue reference="ccM-Z4-JRS"/>
         <segue reference="z9g-Di-MN8"/>
-        <segue reference="46M-zf-44O"/>
+        <segue reference="8sK-OW-cQd"/>
     </inferredMetricsTieBreakers>
 </document>
